--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,8 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  background-color: #0056b3;
+button:disabled {
+  background-color: gray;
 }
 
 .pagination-controls {
@@ -89,8 +89,9 @@ button:hover {
   color: #666;
 }
 
-.first_page_button {
-  margin-right: 24px;
+.pagination_wrapper {
+  display: flex;
+  gap: 24px;
 }
 
 .modal-overlay {
