--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@
   color: white;
   padding: 10px;
   text-align: center;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,6 +49,11 @@ body {
   background-color: white;
   padding: 20px;
   margin-top: 10px;
+}
+
+.user_list_table_wrapper{
+  height: 60vh;
+  overflow-y: auto;
 }
 
 .user_list_table {
